modtek 1.9 and mechengineer for dev

--- a/MechEngineer/Settings.defaults.json
+++ b/MechEngineer/Settings.defaults.json
@@ -560,6 +560,17 @@
                 ]
             },
             {
+                "PrefabIdentifier" : "mortar",
+                "HardpointCandidates" : [
+                    "mortar",
+                    "ac20",
+                    "uac20",
+                    "lbx20",
+                    "ac",
+                    "lbx"
+                ]
+            },
+            {
                 "PrefabIdentifier" : "lrm5",
                 "HardpointCandidates" : [
                     "lrm5",
@@ -726,7 +737,10 @@
         "DurabilityTitleText" : "Long Range",
         "AvgRangeTitleText" : "Movement",
         "MeleeTitleText" : "Durability",
-        "FirepowerTitleText" : "Close Range"
+        "FirepowerTitleText" : "Close Range",
+        "CloseRangeMax" : 90,
+        "MediumRangeMax" : 360,
+        "LongRangeMax" : 570
     },
     "OverrideTonnage" : {
         "Enabled" : true,
