--- a/ScreamsNo/CustomAmmoCategoriesSettings.json
+++ b/ScreamsNo/CustomAmmoCategoriesSettings.json
@@ -211,6 +211,36 @@
       "Damage": 1
     }
   },
+      "TagAoEDamageMult": {
+	"unit_superheavy": {
+      "Range": 1.5,
+      "Damage": 1.5
+    },
+	"unit_powerarmor": {
+      "Range": 0.5,
+      "Damage": 1.5
+    },
+    "aoe_increased_minor": {
+      "Range": 1.2,
+      "Damage": 1.2
+    },
+    "aoe_increased_major": {
+      "Range": 2,
+      "Damage": 2
+    },
+    "aoe_reduced_minor": {
+      "Range": 0.8,
+      "Damage": 0.8
+    },
+    "aoe_reduced_major": {
+      "Range": 0.5,
+      "Damage": 0.5
+    },
+    "aoe_reduced_huge": {
+      "Range": 0.1,
+      "Damage": 0.1
+    }
+  },
   "screamsIds": [
     "scream01",
     "Play_Panic5",
