--- a/BattletechPerformanceFix/Settings.json
+++ b/BattletechPerformanceFix/Settings.json
@@ -6,14 +6,14 @@
     "NoSalvageSoftlock": true,
     "DataLoaderGetEntryCheck": true,
     "ShopTabLagFix": true,
-    "ContractLagFix": false,
+    "ContractLagFix": true,
     "EnableLoggingDuringLoads": true,
     "ExtraLogging": true,
     "ShaderDependencyOverride": true,
     "DisableDeployAudio": false,
     "RemovedFlashpointFix": true,
     "DisableSimAnimations": true,
-    "RemovedContractsFix": false
+    "RemovedContractsFix": true
   },
   "WantContractsLagFixVerify": false
 }
