--- a/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
+++ b/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
@@ -55,6 +55,7 @@
     "StatusEffectsPerHit": true,
     "CantHitUnaffecedByPathing": true,
     "SpreadRange": 30,
+    "HitGenerator": "Cluster",
     "WeaponEffectID": "WeaponEffect-Weapon_LRM5",
     "Description": {
         "Cost": 80000,
