Primitve weapon range tagging for UI

--- a/RogueModuleTech/Primitive/Weapons/Weapon_HEAVYAOE_ROCKETLAUNCHER15.json
+++ b/RogueModuleTech/Primitive/Weapons/Weapon_HEAVYAOE_ROCKETLAUNCHER15.json
@@ -131,7 +131,7 @@
   "ComponentTags": {
     "items": [
       "component_type_stock",
-      "range_standard"
+      "range_long"
     ],
     "tagSetSourceFile": ""
   }
