--- a/RogueModuleTech/Primitive/Weapons/Weapon_HEAVYAOE_ROCKETLAUNCHER20.json
+++ b/RogueModuleTech/Primitive/Weapons/Weapon_HEAVYAOE_ROCKETLAUNCHER20.json
@@ -23,10 +23,10 @@
     "InventorySorter": {
       "SortKey": "03004"
     },
-	"Flags": {
+    "Flags": {
       "flags": [
         "not_broken",
-		"not_destroyed"
+        "not_destroyed"
       ]
     }
   },
@@ -128,13 +128,11 @@
   "AllowedLocations": "All",
   "DisallowedLocations": "All",
   "CriticalComponent": false,
-  "statusEffects": [
-
-  ],
+  "statusEffects": [],
   "ComponentTags": {
     "items": [
       "component_type_stock",
-      "range_standard"
+      "range_long"
     ],
     "tagSetSourceFile": ""
   }
