--- a/RogueModuleTech/Primitive/Weapons/Weapon_LRM_INFERNOLAUNCHER5.json
+++ b/RogueModuleTech/Primitive/Weapons/Weapon_LRM_INFERNOLAUNCHER5.json
@@ -22,10 +22,10 @@
     "InventorySorter": {
       "SortKey": "03001"
     },
-	"Flags": {
+    "Flags": {
       "flags": [
         "not_broken",
-		"not_destroyed"
+        "not_destroyed"
       ]
     }
   },
@@ -138,7 +138,7 @@
   "ComponentTags": {
     "items": [
       "component_type_stock",
-      "range_standard"
+      "range_long"
     ],
     "tagSetSourceFile": ""
   }
