--- a/RogueModuleTech/Primitive/Weapons/Weapon_TANK_ROCKETLAUNCHER5.json
+++ b/RogueModuleTech/Primitive/Weapons/Weapon_TANK_ROCKETLAUNCHER5.json
@@ -23,7 +23,7 @@
     "Flags": {
       "flags": [
         "not_broken",
-		"not_destroyed"
+        "not_destroyed"
       ]
     }
   },
@@ -97,7 +97,7 @@
   "ComponentTags": {
     "items": [
       "component_type_stock",
-      "range_standard"
+      "range_long"
     ],
     "tagSetSourceFile": ""
   }
