--- a/RogueFlashPointModule/settings.json
+++ b/RogueFlashPointModule/settings.json
@@ -57,6 +57,8 @@
 		"Moderbjorn",
 		"BlackWidowCompany",
 		"BaumannGroup",		
-		"BountyHunterAssociates"
+		"BountyHunterAssociates",
+		"SelfEmployed_Farah",
+		"selfemployed_farah"
 	]
 }
