Fixed spawsn for Heavy Metal FP

--- a/RogueHeavyMetalModule/milestoneSets/ms_fp_HM3_huntingSeason.json
+++ b/RogueHeavyMetalModule/milestoneSets/ms_fp_HM3_huntingSeason.json
@@ -163,7 +163,7 @@
                                 "",
                                 "",
                                 "HM3_huntingSeason_1_3wayBattle",
-                                "SelfEmployed_Farah",
+                                "Locals",
                                 "Locals",
                                 "5",
                                 "ms_fp_HM3_huntingSeason_004_Talk",
