--- a/Screams/CustomAmmoCategoriesSettings.json
+++ b/Screams/CustomAmmoCategoriesSettings.json
@@ -193,6 +193,7 @@
 "UpdateReticleTrottle":8,
 "showMissBehavior":"Default",
 "extendedBraceBehavior":true,
+"TerrainFiendlyFireRadius": 10,
   "DefaultAoEDamageMult": {
     "Building": {
       "Range": 1.2,
