--- a/RogueModuleTech/Widget/HandHelds/Hand_Weapon_VehicleGrenadeLauncher.json
+++ b/RogueModuleTech/Widget/HandHelds/Hand_Weapon_VehicleGrenadeLauncher.json
@@ -73,7 +73,7 @@
     "AttackRecoil": 1,
     "Instability": 2,
 	"AMSImmune": true,
-	"AlternateDamageCalc": true,
+	"AlternateDamageCalc": false,
 	"FireTerrainChance": 1,
     "FireDurationWithoutForest": 2,
     "FireTerrainStrength": 10,
