--- a/RogueModuleTech/Widget/BoltOn/BoltOn_GrenadeLauncher_5.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_GrenadeLauncher_5.json
@@ -65,7 +65,7 @@
   "AttackRecoil": 1,
   "Instability": 1,
   "AMSImmune": true,
-  "AlternateDamageCalc": true,
+  "AlternateDamageCalc": false,
   "FireTerrainChance": 0.00666,
   "ImprovedBallistic": true,
   "StatusEffectsPerHit": true,
@@ -74,6 +74,7 @@
   "FireDelayMultiplier": 0.1,
   "ProjectileSpeedMultiplier": 0.8,
   "CantHitUnaffecedByPathing": true,
+  "HitGenerator": "Cluster",
   "SpreadRange": 60,
   "WeaponEffectID": "WeaponEffect-Weapon_LRM10",
   "Description": {
