--- a/BiggerDrop/settings.json
+++ b/BiggerDrop/settings.json
@@ -1,5 +1,5 @@
 {
-  "debugLog": true,
+  "debugLog": false,
   "additionalLanceName": "EXTRA LANCE",
   "additinalMechSlots": 0,
   "additinalPlayerMechSlots": 0,
