--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -184,6 +184,7 @@
         "Enabled" : true,
         "EnabledDescription" : "Provides engines that can be installed on mechs similar to how CBT works.",
         "MovementPointDistanceMultiplierDescription" : "The distance of a TT movement point, 24 is vanilla CombatGameConstants.ExperimentalGridDistance .",
+        "JumpJetMovementPointDistanceMultiplierDescription" : "The distance of a TT movement point when calculating jump distances, if undefined falls back to MovementPointDistanceMultiplier.",
         "MinimJumpHeatDescription" : "Minimum heat when doing a jump, even if only one jump jet exists and only when jumping one hex.",
         "AutoConvertJumpCapacityInDefToStatDescription" : "All JumpCapacity values in JumpJetDefs will be auto-converted to the JumpCapacity statistic.",
         "JumpJetDefaultJumpHeatDescription" : "The heat the jump jet produces when fully* used (* jumping below max distance reduces produced heat). Can be adjusted using the JumpHeat statistic.",
@@ -202,6 +203,7 @@
         "EngineMissingFallbackHeatSinkCapacity" : 30,
         "EngineMissingFallbackHeatSinkCapacityDescription" : "Heat sink capacity if no engine is detected.",
         "MovementPointDistanceMultiplier" : 25,
+        "JumpJetMovementPointDistanceMultiplier" : null,
         "MinimJumpHeat" : 9,
         "AutoConvertJumpCapacityInDefToStat" : true,
         "JumpJetDefaultJumpHeat" : 3,
@@ -544,7 +546,9 @@
         "EnabledDescription" : "Makes the mech lab adhere to any custom mech slot counts.",
         "MechLabArmTopPadding" : 120,
         "MechLabGeneralSlots" : 3,
-        "MechLabGeneralWidgetLabel" : "Specialist"
+        "MechLabGeneralWidgetLabel" : "Specialist",
+        "HideHelpButton" : false,
+        "HideECMButton" : false
     },
     "MoveMultiplierStat" : {
         "Enabled" : true,
@@ -598,9 +602,9 @@
         "AvgRangeTitleText" : "Movement",
         "MeleeTitleText" : "Durability",
         "FirepowerTitleText" : "Close Range",
-        "CloseRangeMax" : 90,
-        "MediumRangeMax" : 360,
-        "LongRangeMax" : 570
+        "CloseRangeMax" : 89,
+        "MediumRangeMax" : 359,
+        "LongRangeMax" : 569
     },
     "OverrideTonnage" : {
         "Enabled" : true,
