--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -525,7 +525,9 @@
     "MechLabArmTopPadding": 120,
     "MechLabGeneralSlots": 3,
 	"MechLabGeneralWidgetLabel" : "Specialist",
-    "Enabled": true
+    "Enabled": true,
+	"HideHelpButton" : true,
+        "HideECMButton" : true
   },
   "MoveMultiplierStat": {
     "Enabled": true
