--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -547,15 +547,15 @@
         "MechLabArmTopPadding" : 120,
         "MechLabGeneralSlots" : 3,
         "MechLabGeneralWidgetLabel" : "Specialist",
-        "HideHelpButton" : false,
-        "HideECMButton" : false
+        "HideHelpButton" : true,
+        "HideECMButton" : true
     },
     "MoveMultiplierStat" : {
         "Enabled" : true,
         "EnabledDescription" : "Introduces a new statistic effect to allow easy manipulation of (mech only) movement."
     },
     "OrderedStatusEffects" : {
-        "Enabled" : true,
+        "Enabled" : false,
         "EnabledDescription" : "Orders status effects, so e.g. install order of mechComponents does not matter for additive and multiplicative effects. Affects all statistic data.",
         "OrderDescription" : "The order in which operations are sorted. Operations not part of the list are deemded unsortable and only sortable operations after such a unsortable operations are sorted. For Example: '* + SET / * +' =sort=> '* + SET + * /'.",
         "Order" : [
