--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -17,7 +17,10 @@
     "DefaultCBTDefHand": "emod_arm_part_hand",
     "InterruptHandDropIfNoLower": false,
     "ExtendHandLimit": true,
-    "Enabled": true
+    "Enabled": true,
+	"DescriptionIdentifier" : "ArmActuatorSupport",
+        "DescriptionTemplate" : "<color=#00cc44><b>Arm Actuator Limit</b>: LeftArm <b>{0}</b> RightArm <b>{1}</b></color>\r\n",
+		"CustomDescriptionTemplate" : "<color=#00cc44><b>Arm Actuator Limit</b>: <b>{0}</b></color>\r\n"
   },
   "ArmorStructureChanges": {
     "Enabled": true
