--- a/BiggerDrop/settings.json
+++ b/BiggerDrop/settings.json
@@ -1,5 +1,6 @@
 {
   "debugLog": false,
+  "debugLanceLoadout": true,
   "additionalLanceName": "EXTRA LANCE",
   "additinalMechSlots": 0,
   "additinalPlayerMechSlots": 0,
