enable stats for pilot events

--- a/Core/MechAffinity/settings.json
+++ b/Core/MechAffinity/settings.json
@@ -461,7 +461,10 @@
   },
   "pilotManagementSettings": {
     "roninBlacklistTag": "MA_BLACKLISTED",
-    "enableRoninBlacklisting": true
+    "enableRoninBlacklisting": true,
+    "statOnHireTag": "stat_on_hire",
+    "statOnFireTag": "stat_on_fire",
+    "statOnKilledTag": "stat_on_killed"
   },
   "legacyData": {
     "debug_writeLegacyAffinityData": false
