--- a/Core/RogueTechCore/Lances/Special/lancedef_quad_easy.json
+++ b/Core/RogueTechCore/Lances/Special/lancedef_quad_easy.json
@@ -39,7 +39,8 @@
           "unit_unique",
           "unit_legendary",
           "unit_totem",
-          "unit_killteam"
+          "unit_killteam",
+          "unit_squad"
         ],
         "tagSetSourceFile": "Tags/UnitTags"
       },
@@ -75,7 +76,8 @@
           "unit_unique",
           "unit_legendary",
           "unit_totem",
-          "unit_killteam"
+          "unit_killteam",
+          "unit_squad"
         ],
         "tagSetSourceFile": "Tags/UnitTags"
       },
@@ -110,7 +112,8 @@
           "unit_unique",
           "unit_legendary",
           "unit_totem",
-          "unit_killteam"
+          "unit_killteam",
+          "unit_squad"
         ],
         "tagSetSourceFile": "Tags/UnitTags"
       },
@@ -145,7 +148,8 @@
           "unit_unique",
           "unit_legendary",
           "unit_totem",
-          "unit_killteam"
+          "unit_killteam",
+          "unit_squad"
         ],
         "tagSetSourceFile": "Tags/UnitTags"
       },
