--- a/Core/ResultOrientedItems/itemEvents/ROI_LAMcademy_LAM_Appointment.json
+++ b/Core/ResultOrientedItems/itemEvents/ROI_LAMcademy_LAM_Appointment.json
@@ -10,13 +10,7 @@
 		                "op" : "GreaterThanOrEqual",
 		                "val" : 500000,
 		                "valueConstant" : "500000"
-		            },
-					{
-						"obj" : "LAMPilotEnrolled",
-						"op" : "LessThanOrEqual",
-						"val" : 0,
-						"valueConstant" : "0"
-					}
+		            }
 		        ]
 		}
 	],
@@ -26,7 +20,7 @@
 	                "ForceEvents": [
     	                    {
 	                        "Scope": "Company",
-	                        "EventID": "forceevent_co_LAMcademy",
+	                        "EventID": "forceevent_co_LAM_Appointment",
 	                        "MinDaysWait": 0,
 		                "MaxDaysWait": 0,
 		                "Probability": 100,
