--- a/Core/MechAffinity/settings.json
+++ b/Core/MechAffinity/settings.json
@@ -464,7 +464,16 @@
     "enableRoninBlacklisting": true,
     "statOnHireTag": "stat_on_hire",
     "statOnFireTag": "stat_on_fire",
-    "statOnKilledTag": "stat_on_killed"
+    "statOnKilledTag": "stat_on_killed",
+    "ExcludeRePoolingTags" :[
+      "pilot_rtcrew",
+      "pilot_rtolegend",
+      "pilot_maneidomini"
+    ],
+    "CanRepoolRonin": true,
+    "RepoolRoninChance": 75,
+    "RepoolImmuneDeployments": 25,
+    "EnableSpawnModifiers": true
   },
   "legacyData": {
     "debug_writeLegacyAffinityData": false
