--- a/Core/Solaris7/events/event_solarisSeasonStart4.json
+++ b/Core/Solaris7/events/event_solarisSeasonStart4.json
@@ -18,12 +18,7 @@
     },
     "ExclusionTags": {
       "tagSetSourceFile": "Tags/CompanyTags",
-      "items": [
-        "company_solaris_BANNED",
-        "company_solaris_recent",
-        "company_solaris_championship",
-        "company_solaris_DECLINED"
-      ]
+      "items": []
     },
     "RequirementComparisons": []
   },
@@ -53,9 +48,7 @@
               "Requirements": null,
               "AddedTags": {
                 "tagSetSourceFile": "Tags/CompanyTags",
-                "items": [
-                  "company_solaris_DECLINED"
-                ]
+                "items": []
               },
               "RemovedTags": {
                 "tagSetSourceFile": "",
@@ -121,9 +114,9 @@
             "items": []
           },
           "ExclusionTags": {
-             "tagSetSourceFile": "Tags/CompanyTags",
+            "tagSetSourceFile": "Tags/CompanyTags",
             "items": [
-             "company_solaris_championship_ticket"
+              "company_solaris_championship_ticket"
             ]
           },
           "RequirementComparisons": []
@@ -175,9 +168,7 @@
               "Requirements": null,
               "AddedTags": {
                 "tagSetSourceFile": "Tags/CompanyTags",
-                "items": [
-                  "company_solaris_championship_ticket"
-                ]
+                "items": []
               },
               "RemovedTags": {
                 "tagSetSourceFile": "",
