Switched Brace to Fire mechanic to use Instability instead of knockdown

--- a/Core/Abilifier/EffectDataExtensions.json
+++ b/Core/Abilifier/EffectDataExtensions.json
@@ -498,5 +498,10 @@
 		"TargetComponentTagNotMatch": [
 			"Artillery"
 		]
+	},
+	"ArtilleryFilter": {
+		"TargetComponentTagMatch": [
+			"Artillery"
+		]
 	}
 }
