--- a/Core/RogueModulePilots/AITraits/TraitKillTeamsEasy.json
+++ b/Core/RogueModulePilots/AITraits/TraitKillTeamsEasy.json
@@ -24,15 +24,15 @@
       "effectType": "StatisticEffect",
       "nature": "Buff",
       "Description": {
-        "Id": "BracetoFire Reduction",
-        "Name": "AI Trait Kill Teams Easy: Decreased Self Knockdown on Fire",
+        "Id": "BraceToFire Reduction",
+        "Name": "AI Trait Kill Teams Easy: Decreased Self Instability on Fire",
         "Details": "Tubthumping",
         "Icon": "uixSvgIcon_run_n_gun"
       },
       "statisticData": {
-        "statName": "SelfknockdownCheck_OnFire",
+        "statName": "SelfInstability_OnFire",
         "operation": "Float_Add",
-        "modValue": "-0.7",
+        "modValue": "-45",
         "modType": "System.Single"
       }
     },
