update RTO client

--- a/InstallOptions/PersistentMapClient/settings.json
+++ b/InstallOptions/PersistentMapClient/settings.json
@@ -5,10 +5,10 @@
 	"allowSelfSignedCert" : true,
 	"priorityContactPayPercentage": 1.5,
 	"priorityContractsPerAlly": 2,
-	"Season": "Sobral04",
+	"Season": "Rayson05",
 	"percentageToFlipEmployer": 0.25,
 	"percentageTravelContracts": 0.3,
-        "requestTimeout": 25000,
+	"requestTimeout": 25000,
 	"eventMarkers" : [
 	  {
 		"type" : "OnlineEvent",
@@ -108,6 +108,21 @@
 			"Colour": "#ff0066"
 		  }
 		}
-	  }
+	  },
+	  {
+		"type" : "PirateTarget",
+		"marker": {
+			"useHmAnimation": true,
+			"flashpointPrefix": "",
+			"swapColour": true,
+			"keepAlpha": true,
+			"useOnlyInner": true,
+			"autoDetectContracts": false,
+			"useContractColourOverride": false,
+			"innerCircle": {
+				"Colour": "#75162e"
+			}
+		}
+		}
 	]
   }
