--- a/InstallOptions/Pilots/FreshMechwarriors/pilot/pilot_Kel_Snowborn.json
+++ b/InstallOptions/Pilots/FreshMechwarriors/pilot/pilot_Kel_Snowborn.json
@@ -31,14 +31,18 @@
   "AIPersonality": "Undefined",
   "PilotTags": {
     "items": [
-      "pilot_backer",
-      "name_Gunrunner",
-      "pilot_military",
-      "pilot_brave",
-      "pilot_spacer",
-      "pilot_merchant",
-      "pilot_mechwarrior",
-      "pilot_vehicle_crew"
+    "pilot_backer",
+    "name_Gunrunner",
+    "pilot_military",
+    "pilot_brave",
+    "pilot_spacer",
+    "pilot_merchant",
+    "pilot_mechwarrior",
+    "pilot_vehicle_crew",
+    "can_pilot_generic_vehicle",
+    "can_pilot_generic_mech",
+    "can_pilot_vtol",
+    "can_pilot_landairmech"
     ],
     "tagSetSourceFile": ""
   },
