Ed's a day late fixes + Tenochca
VTOL/LAM starts removed, garantueed vtols/lams removed from other starts, some custom starts slimmed down a bit.
Other startlance fixes.
Artillery weapon min-range adjustments for direct-firemode, roughly half of before.

Vehicle Added: Tenochca... (#BlameRaza approved!) he said he'll tag tmr or so! (will update it's fluff text later)

--- a/Core/IRTweaks/Menus/CareerDifficultySettings.json
+++ b/Core/IRTweaks/Menus/CareerDifficultySettings.json
@@ -2637,7 +2637,7 @@
             {
               "ConstantType": "CareerMode",
               "ConstantName": "StartingRandomMechLists",
-              "ConstantValue": "itemCollection_Mechs_Starting_BandB_Bradfords,itemCollection_Mechs_Starting_BandB_Bradfords,itemCollection_Mechs_Starting_BandB_Bulldogs,itemCollection_Mechs_Starting_BandB_Bulldogs,itemCollection_Mechs_Starting_BandB_BMech,itemCollection_Mechs_Starting_BandB_BMech_Light,itemCollection_Mechs_Starting_Battlearmour"
+              "ConstantValue": "itemCollection_Mechs_Starting_BandB_Bradfords,itemCollection_Mechs_Starting_BandB_Bradfords,itemCollection_Mechs_Starting_BandB_Bulldogs,itemCollection_Mechs_Starting_BandB_Bulldogs,itemCollection_Mechs_Starting_Battlearmour"
             },
             {
               "ConstantType": "CareerMode",
@@ -2733,7 +2733,7 @@
             {
               "ConstantType": "CareerMode",
               "ConstantName": "StartingRandomMechLists",
-              "ConstantValue": "itemCollection_Mechs_Clans_0,itemCollection_Mechs_Clans_1,itemCollection_Mechs_Clans_2,itemCollection_Mechs_Clans_3,itemCollection_Mechs_Clans_4,itemCollection_Mechs_Starting_Battlearmour_Clan"
+              "ConstantValue": "itemCollection_Mechs_Clans_0,itemCollection_Mechs_Clans_1,itemCollection_Mechs_Clans_2,itemCollection_Mechs_Clans_3,itemCollection_Mechs_Clans_4"
             },
             {
               "ConstantType": "CareerMode",
@@ -2805,7 +2805,7 @@
             {
               "ConstantType": "CareerMode",
               "ConstantName": "StartingRandomMechLists",
-              "ConstantValue": "itemCollection_Mechs_Starting_Davion_Light.itemCollection_Mechs_Starting_Davion_LightUpgraded,itemCollection_Mechs_Starting_Davion_Medium,itemCollection_Mechs_Starting_Davion_MediumUpgraded"
+              "ConstantValue": "itemCollection_Mechs_Starting_Davion_Light,itemCollection_Mechs_Starting_Davion_LightUpgraded,itemCollection_Mechs_Starting_Davion_Medium,itemCollection_Mechs_Starting_Davion_MediumUpgraded"
             },
             {
               "ConstantType": "CareerMode",
@@ -2979,30 +2979,6 @@
               "ConstantType": "CareerMode",
               "ConstantName": "FactionReputation",
               "ConstantValue": "Kurita:50,Davion:-25,Steiner:-25"
-            }
-          ]
-        },
-        {
-          "ID": "diff_LAM",
-          "Name": "LAM",
-          "TelemetryEventDesc": "",
-          "DifficultyValue": 0,
-          "CareerScoreModifier": 0,
-          "DifficultyConstants": [
-            {
-              "ConstantType": "CareerMode",
-              "ConstantName": "StartingSystems",
-              "ConstantValue": "Irece"
-            },
-            {
-              "ConstantType": "CareerMode",
-              "ConstantName": "StartingRandomMechLists",
-              "ConstantValue": "itemCollection_Mechs_Starting_LAM_Light,itemCollection_Mechs_Starting_LAM_Light,itemCollection_Mechs_Starting_LAM_Light,itemCollection_Mechs_Starting_LAM_Medium,itemCollection_Mechs_Starting_Tanks_VTOL,itemCollection_Mechs_Starting_Tanks_VTOL"
-            },
-            {
-              "ConstantType": "CareerMode",
-              "ConstantName": "FactionReputation",
-              "ConstantValue": "MercenaryReviewBoard:100,AuriganPirates:30"
             }
           ]
         },
@@ -3285,7 +3261,7 @@
             {
               "ConstantType": "CareerMode",
               "ConstantName": "StartingRandomMechLists",
-              "ConstantValue": "itemCollection_Mechs_Recon,itemCollection_Mechs_Recon,itemCollection_Mechs_Recon,itemCollection_Mechs_Recon,itemCollection_Mechs_Starting_Tanks_Recon,itemCollection_Mechs_Starting_Tanks_Recon"
+              "ConstantValue": "itemCollection_Mechs_Recon,itemCollection_Mechs_Recon,itemCollection_Mechs_Recon,itemCollection_Mechs_Starting_Tanks_Recon,itemCollection_Mechs_Starting_Tanks_Recon"
             },
             {
               "ConstantType": "CareerMode",
@@ -3309,7 +3285,7 @@
             {
               "ConstantType": "CareerMode",
               "ConstantName": "StartingRandomMechLists",
-              "ConstantValue": "itemCollection_Mechs_Starting_RustyDan_Heavy,itemCollection_Mechs_Starting_RustyDan_Light,itemCollection_Mechs_Starting_RustyDan_Light,itemCollection_Mechs_Starting_RustyDan_VMedium,itemCollection_Mechs_Starting_RustyDan_VMedium,itemCollection_Mechs_Starting_RustyDan_VLight,itemCollection_Mechs_Starting_RustyDan_VTOLMedium"
+              "ConstantValue": "itemCollection_Mechs_Starting_RustyDan_Heavy,itemCollection_Mechs_Starting_RustyDan_Light,itemCollection_Mechs_Starting_RustyDan_VMedium,itemCollection_Mechs_Starting_RustyDan_VLight"
             },
             {
               "ConstantType": "CareerMode",
@@ -3339,6 +3315,30 @@
               "ConstantType": "CareerMode",
               "ConstantName": "FactionReputation",
               "ConstantValue": "MercenaryReviewBoard:100,AuriganPirates:30"
+            }
+          ]
+        },
+        {
+          "ID": "diff_Society",
+          "Name": "Society",
+          "TelemetryEventDesc": "",
+          "DifficultyValue": 0,
+          "CareerScoreModifier": 0,
+          "DifficultyConstants": [
+            {
+              "ConstantType": "CareerMode",
+              "ConstantName": "StartingSystems",
+              "ConstantValue": "EC3049-S46A"
+            },
+            {
+              "ConstantType": "CareerMode",
+              "ConstantName": "StartingRandomMechLists",
+              "ConstantValue": "itemCollection_Mechs_Society_Base_0,itemCollection_Mechs_Society_Base_1,itemCollection_Mechs_Society_Base_2,itemCollection_Mechs_Society_Base_3,itemCollection_Mechs_Society_Base_4"
+            },
+            {
+              "ConstantType": "CareerMode",
+              "ConstantName": "FactionReputation",
+              "ConstantValue": "Society:50,ClanCloudCobra:-20,ClanDiamondShark:-20,ClanFireMandrill:-20,ClanGhostBear:-20,ClanGoliathScorpion:-20,ClanHellsHorses:-20,ClanIceHellion:-20,ClanJadeFalcon:-20,ClanNovaCat:-20,ClansGeneric:-20,ClanSmokeJaguar:-20,ClanSnowRaven:-20,ClanStarAdder:-20,ClanSteelViper:-20,ClanWolf:-20"
             }
           ]
         },
@@ -3405,7 +3405,7 @@
             {
               "ConstantType": "CareerMode",
               "ConstantName": "StartingRandomMechLists",
-              "ConstantValue": "itemCollection_Mechs_Starting_Tanks_VTOL,itemCollection_Mechs_Starting_Tanks_Medium_II,itemCollection_Mechs_Starting_Tanks_Medium,itemCollection_Mechs_Starting_Tanks_Light_II,itemCollection_Mechs_Starting_Tanks_Light,itemCollection_Mechs_Starting_Militia_Techie"
+              "ConstantValue": "itemCollection_Mechs_Starting_Tanks_Medium_II,itemCollection_Mechs_Starting_Tanks_Medium,itemCollection_Mechs_Starting_Tanks_Light_II,itemCollection_Mechs_Starting_Tanks_Light,itemCollection_Mechs_Starting_Militia_Techie"
             },
             {
               "ConstantType": "CareerMode",
@@ -3535,30 +3535,6 @@
           ]
         },
         {
-          "ID": "diff_VTOL",
-          "Name": "VTOL",
-          "TelemetryEventDesc": "",
-          "DifficultyValue": 0,
-          "CareerScoreModifier": 0,
-          "DifficultyConstants": [
-            {
-              "ConstantType": "CareerMode",
-              "ConstantName": "StartingSystems",
-              "ConstantValue": "Andurien"
-            },
-            {
-              "ConstantType": "CareerMode",
-              "ConstantName": "StartingRandomMechLists",
-              "ConstantValue": "itemCollection_Mechs_Starting_LAM_Medium,itemCollection_Mechs_Starting_LAM_Light,itemCollection_Mechs_Starting_Tanks_VTOL,itemCollection_Mechs_Starting_Tanks_VTOL,itemCollection_Mechs_Starting_Tanks_VTOL,itemCollection_Mechs_Starting_Tanks_VTOL"
-            },
-            {
-              "ConstantType": "CareerMode",
-              "ConstantName": "FactionReputation",
-              "ConstantValue": "Marik:50"
-            }
-          ]
-        },
-        {
           "ID": "diff_Wobbles",
           "Name": "Word Of Blake",
           "TelemetryEventDesc": "",
@@ -3573,7 +3549,7 @@
             {
               "ConstantType": "CareerMode",
               "ConstantName": "StartingRandomMechLists",
-              "ConstantValue": "itemCollection_Mechs_Starting_WoB_Medium,itemCollection_Mechs_Starting_WoB_Light_A,itemCollection_Mechs_Starting_WoB_Light_A,itemCollection_Mechs_Starting_WoB_Light_D,itemCollection_Mechs_Starting_WoB_Light_D,itemCollection_Mechs_Starting_Vehicle_Light_ISGeneral"
+              "ConstantValue": "itemCollection_Mechs_Starting_WoB_Light_A,itemCollection_Mechs_Starting_WoB_Light_A,itemCollection_Mechs_Starting_WoB_Light_C,itemCollection_Mechs_Starting_WoB_Light_C,itemCollection_Mechs_Starting_WoB_Light_D,itemCollection_Mechs_Starting_WoB_Light_D"
             },
             {
               "ConstantType": "CareerMode",
