--- a/Core/MechAffinity/pilotselectsettings.json
+++ b/Core/MechAffinity/pilotselectsettings.json
@@ -1,14 +1,31 @@
 {
-  "RoninFromList": 0,
-  "ProceduralPilots": 0,
-  "RandomRonin": 7,
-  "PossibleStartingRonin": [],
-  "RandomRestrictions": [
-    {
-      "tags" : ["pilot_rtolegend", "pilot_rtcrew", "pilot_maneidomini"],
-      "limit" : 1,
-      "restrictionId" : "Rto/Crew/WoB limit"
-    }
-  ]
+    "RoninFromList": 0,
+    "ProceduralPilots": 0,
+    "RandomRonin": 7,
+    "PossibleStartingRonin": [],
+    "RandomRestrictions": [
+        {
+            "tags": [
+                "pilot_rtolegend",
+                "pilot_rtcrew",
+                "pilot_maneidomini"
+            ],
+            "limit": 1,
+            "restrictionId": "Rto/Crew/WoB limit"
+        },
+        {
+            "tags": [
+                "pilot_mandalorian"
+            ],
+            "limit": 1,
+            "restrictionId": "Mandalorian limit"
+        },
+        {
+            "tags": [
+                "pilot_jarnfolk_exile"
+            ],
+            "limit": 1,
+            "restrictionId": "JarnfolkExile limit"
+        }
+    ]
 }
-
