add chevron options

--- a/InstallOptions/Pilots/PilotsRonin/pilotselectsettings.json
+++ b/InstallOptions/Pilots/PilotsRonin/pilotselectsettings.json
@@ -1,13 +1,6 @@
 {
   "RoninFromList": 0,
   "ProceduralPilots": 0,
-  "RandomRonin": 7,
-  "RandomRestrictions": [
-    {
-      "tags" : ["pilot_rtolegend", "pilot_rtcrew"],
-      "limit" : 1,
-      "restrictionId" : "Rto/Crew limit"
-    }
-  ]
+  "RandomRonin": 7
 }
 
