--- a/Core/IRTweaks/Menus/CareerDifficultySettings.json
+++ b/Core/IRTweaks/Menus/CareerDifficultySettings.json
@@ -2781,7 +2781,7 @@
             {
               "ConstantType": "CareerMode",
               "ConstantName": "StartingRandomMechLists",
-              "ConstantValue": "itemCollection_Mechs_Starting_Comstar_Light,itemCollection_Mechs_Starting_Comstar_Light,itemCollection_Mechs_Starting_Comstar_Light,itemCollection_Mechs_Starting_Comstar_Light,itemCollection_Mechs_Starting_Comstar_Light,itemCollection_Mechs_Starting_Comstar_Light"
+              "ConstantValue": "itemCollection_Mechs_Starting_Comstar_Light,itemCollection_Mechs_Starting_Comstar_Light,itemCollection_Mechs_Starting_Comstar_Light,itemCollection_Mechs_Starting_Comstar_Light,itemCollection_Mechs_Starting_Comstar_Light"
             },
             {
               "ConstantType": "CareerMode",
