--- a/InstallOptions/PersistentMapClient/settings.json
+++ b/InstallOptions/PersistentMapClient/settings.json
@@ -1,6 +1,6 @@
 {
 	"debug" : true,
-	"trace" : true,
+	"trace" : false,
 	"ServerURL" : "https://161.97.74.91:16001/",
 	"allowSelfSignedCert" : true,
 	"priorityContactPayPercentage": 1.5,
