--- a/InstallOptions/PersistentMapClient/settings.json
+++ b/InstallOptions/PersistentMapClient/settings.json
@@ -1,5 +1,5 @@
 {
-	"debug" : true,
+	"debug" : false,
 	"trace" : false,
 	"ServerURL" : "https://161.97.74.91:16001/",
 	"allowSelfSignedCert" : true,
