Lance Resolve Cost changes

--- a/Core/RogueModuleTech/BattleArmor/Quirks/Quirk_BattleArmor_InspiringAppearance.json
+++ b/Core/RogueModuleTech/BattleArmor/Quirks/Quirk_BattleArmor_InspiringAppearance.json
@@ -7,7 +7,7 @@
     ],
     "BonusDescriptions": [
       "LanceResolve3: 1",
-      "LanceResolveCost: -5%",
+      "LanceResolveCost2: -5%",
       "Quirk"
     ],
     "Flags": [
@@ -76,7 +76,7 @@
     {
       "durationData": {
         "duration": -1,
-        "stackLimit": -1
+        "stackLimit": 1
       },
       "targetingData": {
         "effectTriggerType": "Passive",
