--- a/Core/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/Core/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -355,10 +355,10 @@
 	"AIPathingOptimization": true,
 	"AIPathingSamplesLimit": 120,
 	"AIPathingMultithread": false,
-	"PhysicsAoE_Weapons": true,
-	"PhysicsAoE_Deffered": true,
-	"PhysicsAoE_Minefield": true,
-	"PhysicsAoE_API": true,
+	"PhysicsAoE_Weapons": false,
+	"PhysicsAoE_Deffered": false,
+	"PhysicsAoE_Minefield": false,
+	"PhysicsAoE_API": false,
 	"RemoveToHitModifiers": [
 		"DAMAGED"
 	],
