--- a/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1499.json
+++ b/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1499.json
@@ -16,6 +16,7 @@
       "unit_superheavy_tier4",
       "unit_superheavy_tier5",
       "unit_rarity_command",
+      "unit_rarity_dangerous",
       "unit_rarity_equipment_level_4",
       "comstar",
       "wordofblake",
