--- a/Core/WhamBaLAM/ROI_Items/Gear_LAMcademy_LAM_Appointment.json
+++ b/Core/WhamBaLAM/ROI_Items/Gear_LAMcademy_LAM_Appointment.json
@@ -11,7 +11,7 @@
     }
   },
   "Description": {
-    "Cost": 1000,
+    "Cost": 100000000,
     "Rarity": 4,
     "Purchasable": true,
     "Manufacturer": "",
