Pod Physics off

--- a/Core/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/Core/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -358,12 +358,12 @@
 	"PhysicsAoE_Weapons": true,
 	"PhysicsAoE_Deffered": true,
 	"PhysicsAoE_Minefield": true,
-	"PhysicsAoE_API": true,
+	"PhysicsAoE_API": false,
 	"RemoveToHitModifiers": [
 		"DAMAGED"
 	],
 	"RestoreEjectedWeapons": true,
-	"HexSizeForMods": 24,
+	"HexSizeForMods": 25,
 	"AIUnsafeJamChance": 0.5,
 	"ScaleIncomingHeat": 150
 }
