--- a/Core/MissionControl/config/Contracts/SAR/Rescue_SAR_Easy.json
+++ b/Core/MissionControl/config/Contracts/SAR/Rescue_SAR_Easy.json
@@ -1,5 +1,5 @@
 {
-    "ID": "Rescue_SAR_AssetRetrieval_Easy",
+    "ID": "Rescue_SAR_Easy",
     "AdditionalLances": {
       "Enable": true,
       "AllyLanceCount": 0
