Updated Mission control lance size for new clans

--- a/Core/MissionControl/settings.json
+++ b/Core/MissionControl/settings.json
@@ -195,6 +195,18 @@
         {
           "Faction": "ClanWolfInExile",
           "DifficultyMod": -2
+        },
+        {
+          "Faction": "ClanWolverine",
+          "DifficultyMod": -2
+        },
+        {
+          "Faction": "ClanWidowmaker",
+          "DifficultyMod": -2
+        },
+        {
+          "Faction": "ClanMongoose",
+          "DifficultyMod": -2
         }
       ],
       "6": [
