Fixes for VTOL/LAM Event Chains
Fixes for issues with previous VTOL/LAM Training Events.

Change Log:
Tracking tags/stats changed to bypass any previous locked careers;
Cost increases from 500k to 750k;
Time Delay decreased from 6-12months down to 4-6months;
Only 1 pilot may be in training at any given time;

WARNING! Recommended game is rebooted (exit to desktop and restart game) after 2nd training in one game session.  Event may fail to trigger on 3+ consecutive runs of the training without a reboot.  IF event fails to trigger, you will have to roll back to BEFORE training was purchased otherwise your career will be locked from any further training.

--- a/Core/ResultOrientedItems/itemEvents/ROI_Aircademy_VTOL_Appointment.json
+++ b/Core/ResultOrientedItems/itemEvents/ROI_Aircademy_VTOL_Appointment.json
@@ -8,8 +8,14 @@
 		            {
 		                "obj" : "Funds",
 		                "op" : "GreaterThanOrEqual",
-		                "val" : 500000,
-		                "valueConstant" : "500000"
+		                "val" : 750000,
+		                "valueConstant" : "750000"
+		            },
+					{
+		                "obj" : "PilotEnrolled",
+		                "op" : "LessThanOrEqual",
+		                "val" : 0,
+		                "valueConstant" : "0"
 		            }
 		        ]
 		}
@@ -20,7 +26,7 @@
 	                "ForceEvents": [
     	                    {
 	                        "Scope": "Company",
-	                        "EventID": "forceevent_co_VTOL_Appointment",
+	                        "EventID": "forceevent_co_VTOL_Aircademy",
 	                        "MinDaysWait": 0,
 		                "MaxDaysWait": 0,
 		                "Probability": 100,
