--- a/Core/ResultOrientedItems/itemEvents/ROI_Aircademy_VTOL_Appointment_Commander.json
+++ b/Core/ResultOrientedItems/itemEvents/ROI_Aircademy_VTOL_Appointment_Commander.json
@@ -8,23 +8,29 @@
 		            {
 		                "obj" : "Funds",
 		                "op" : "GreaterThanOrEqual",
-		                "val" : 500000,
-		                "valueConstant" : "500000"
-		            }
+		                "val" : 750000,
+		                "valueConstant" : "750000"
+		            },
+					{
+						"obj" : "PilotEnrolled",
+						"op" : "LessThanOrEqual",
+						"val" : 0,
+						"valueConstant" : "0"
+					}
 		        ]
 		},
-    {
-      "Scope": "Commander",
-      "ExclusionTags":  [],
-      "RequirementComparisons": [
-        {
-          "obj": "Injuries",
-          "op": "Equal",
-          "val": 0,
-          "valueConstant": "0"
-        }
-      ]
-    }
+    	{
+      		"Scope": "Commander",
+      		"ExclusionTags":  [],
+      		"RequirementComparisons": [
+        			{
+          				"obj": "Injuries",
+          				"op": "Equal",
+          				"val": 0,
+          				"valueConstant": "0"
+        		}
+      		]	
+    	}
 	],
 	"Results": [
 		{
@@ -32,7 +38,7 @@
 	                "ForceEvents": [
     	                    {
 	                        "Scope": "Company",
-	                        "EventID": "forceevent_co_VTOL_Appointment",
+	                        "EventID": "forceevent_co_VTOL_Aircademy_Commander",
 	                        "MinDaysWait": 0,
 		                "MaxDaysWait": 0,
 		                "Probability": 100,
