Re-enable physics API and raycasting for pods

--- a/Core/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/Core/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -358,7 +358,7 @@
 	"PhysicsAoE_Weapons": true,
 	"PhysicsAoE_Deffered": true,
 	"PhysicsAoE_Minefield": true,
-	"PhysicsAoE_API": false,
+	"PhysicsAoE_API": true,
 	"RemoveToHitModifiers": [
 		"DAMAGED"
 	],
