Another VTOL/LAM update attempt
Various changes to event workflow; removed TRT_MW from event, now only picks ONE suitable pilot which allows player to eventually train ALL their allowed pilots; add BYPASS events that are set to RANDOMLY trigger if main training event fails to spawn AFTER pilot comes off SetTimeout.  As this failsafe is random, it can take a minimum of 20-180+ days to spawn if required.

--- a/Core/ResultOrientedItems/itemEvents/ROI_Aircademy_VTOL_Appointment_Commander.json
+++ b/Core/ResultOrientedItems/itemEvents/ROI_Aircademy_VTOL_Appointment_Commander.json
@@ -28,7 +28,13 @@
           				"op": "Equal",
           				"val": 0,
           				"valueConstant": "0"
-        		}
+        		},
+				{
+					"obj" : "CommanderVTOL",
+					"op" : "LessThanOrEqual",
+					"val" : 0,
+					"valueConstant" : "0"
+				}
       		]	
     	}
 	],
