--- a/Core/ResultOrientedItems/itemEvents/ROI_LAMcademy_LAM_Appointment_Commander.json
+++ b/Core/ResultOrientedItems/itemEvents/ROI_LAMcademy_LAM_Appointment_Commander.json
@@ -28,7 +28,13 @@
           "op": "Equal",
           "val": 0,
           "valueConstant": "0"
-        }
+        },
+		{
+			"obj" : "CommanderLAM",
+			"op" : "LessThanOrEqual",
+			"val" : 0,
+			"valueConstant" : "0"
+		}
       ]
     }
 	],
