allow all players to see

--- a/InstallOptions/PersistentMapClient/settings.json
+++ b/InstallOptions/PersistentMapClient/settings.json
@@ -109,6 +109,21 @@
 	  {
 		"type" : "PirateTarget",
 		"marker": {
+			"useHmAnimation": false,
+			"flashpointPrefix": "",
+			"swapColour": true,
+			"keepAlpha": true,
+			"useOnlyInner": true,
+			"autoDetectContracts": false,
+			"useContractColourOverride": false,
+			"innerCircle": {
+				"Colour": "#75162e"
+			}
+		}
+	  }, 
+	  {
+		"type" : "PriorityPirateTarget",
+		"marker": {
 			"useHmAnimation": true,
 			"flashpointPrefix": "",
 			"swapColour": true,
@@ -120,6 +135,6 @@
 				"Colour": "#75162e"
 			}
 		}
-		}
+	  }
 	]
   }
