--- a/Core/Abilifier/AbilityRealizerSettings.json
+++ b/Core/Abilifier/AbilityRealizerSettings.json
@@ -82,6 +82,7 @@
 			"pilot_tech":["AbilityDef_FirstAid", "AbilityDef_CarefulManeuvers", "AbilityDef_AAStance"],
 			"pilot_notYourTypicalKerensky":["AbilityDefCMD_Strafe_Fiona"],
 			"pilot_recruitmentThievery": ["AbilityDefCMD_MechDrop_Narf"],
+			"pilot_whoLetTheDogsOut": ["AbilityDefCMD_MechDrop_Liquidforce"],
 			"pilot_ferretMaster": ["AbilityDefCMD_TankDrop_Cargo"],
 			"pilot_iJustWantedInfernos":["AbilityDefCMD_Strafe_Alekto"]
 		},
