--- a/DLC/RogueFlashPointModule/settings.json
+++ b/DLC/RogueFlashPointModule/settings.json
@@ -98,6 +98,7 @@
 		"FinmarkFreeRepublic",
 		"KitteryPrefecture",
 		"SLDFinExile",
-		"RoguePirates"
+		"RoguePirates",
+		"BerganIndustries"
 	]
 }
