SkullDifficulty Icon update
Updated Skull Difficulty icon and colours

Skull Difficulty:
- Added D51-D60 colour: #D5B56E;
- Added D61+ colour: #FFFF00

Chevron Difficulty:
- Added D51-D60 colour: #D5B56E; Added new icon
- Added D61+ colour: #FFFF00; Added new icon

--- a/Core/DropCostsEnhanced/settings.json
+++ b/Core/DropCostsEnhanced/settings.json
@@ -193,6 +193,14 @@
   {
     "rung" : 3,
     "colour" : "#3E0088"
+  },
+  {
+    "rung" : 4,
+    "colour" : "#D5B56E"
+  },
+  {
+    "rung" : 5,
+    "colour" : "#FFFF00"
   }
 ]
 }
