--- a/Core/MissionControl/settings.json
+++ b/Core/MissionControl/settings.json
@@ -207,6 +207,10 @@
         {
           "Faction": "ClanMongoose",
           "DifficultyMod": -2
+        },
+        {
+          "Faction": "ClanSeaFox",
+          "DifficultyMod": -2
         }
       ],
       "6": [
